set min height of current show, fixes overflow on smaller screens within tagdiv composer

--- a/templates/player-futura.css
+++ b/templates/player-futura.css
@@ -99,6 +99,7 @@
   overflow-x: hidden;
   overflow-y: hidden;
   min-width: 8em;
+  min-height: 4vh;
 
   font-size: 4vh;
   text-transform: uppercase;
